class名の変更 rem2→Mrem2

--- a/attention.html
+++ b/attention.html
@@ -21,7 +21,7 @@
     </div>
 
     <div id="text">
-      <h1 class="attention rem2">非常事態発生</h1>
+      <h1 class="attention Mrem2">非常事態発生</h1>
 
       <h3>無事にスマホ内部に潜入が出来たか…と思った矢先に、<br />
         なんと、案内AIが暴走しスマホ内に閉じ込められてしまった。<br />
@@ -37,7 +37,7 @@
     </div>
 
     <div id="cr">
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       授業主催： N・S高<br />
       協力：株式会社SCRAP<br />
@@ -49,7 +49,7 @@
       生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
 
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       © 2021 YOYOGI39
     </div>
