--- a/end.html
+++ b/end.html
@@ -23,14 +23,14 @@
 
     <div id="text">
 
-      <h3 class="rem2b">
+      <h3 class="Mrem2b">
         ……と思ったら、倒したはずのAIが話しかけてきた。<br /><br />
         「実は、私の暴走も今までの謎解きも、全部演出でした！w　<br />
         皆さんに楽しんで貰おうと思い、こんなツアー内容にしたのですが、いかがだったでしょうか？」<br /><br />
         「とにかく、ツアーに参加して頂き、誠にありがとうございました！」
       </h3>
 
-      <h2 class="rem2b">スマートフォンからの脱出　おしまい！</h2>
+      <h2 class="Mrem2b">スマートフォンからの脱出　おしまい！</h2>
 
       <div class="frame">
 
@@ -54,7 +54,7 @@
     </div>
 
     <div id="cr">
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       授業主催： N・S高<br />
       協力：株式会社SCRAP<br />
@@ -66,7 +66,7 @@
       生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
 
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       © 2021 YOYOGI39
     </div>
