--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div id="cr">
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       授業主催： N・S高<br />
       協力：株式会社SCRAP<br />
@@ -60,7 +60,7 @@
       生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
 
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       © 2021 YOYOGI39
     </div>
