--- a/thx.html
+++ b/thx.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>脱出成功！ | ProjectN</title>
+  <title>感謝と参考にしたサイト | ProjectN</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" href="assets/img/favicon.ico">
@@ -16,18 +16,16 @@
   <div id="all">
 
     <div id="title">
-      <img src="assets/img/tlogo.png" class="rogo" alt="YOYOGI39"></a>
+      <a href="https://mioyuki.github.io/Alfa-yoyogi-39/"><img src="assets/img/tlogo.png" class="rogo"
+          alt="YOYOGI39"></a>
       <div class="hr"></div>
     </div>
 
     <div id="text">
-      <h2>脱出成功！</h2>
-      <h3>
-        暴走したAIに勝利した！<br />
-        最後のロックを解き、<br />
-        無事スマートフォンから脱出することが出来た！<br /><br />
-      </h3>
-      <h3><a href="end.html" class="btn-flat-border">その後……？</a></h3>
+
+      <span class="Mrem2t">雛形メッセージ</span>
+      <h4><a href="" class="btn-flat-border">雛形ボタン</a></h4>
+
     </div>
 
     <div id="cr">
@@ -47,7 +45,6 @@
 
       © 2021 YOYOGI39
     </div>
-
   </div>
 
 </body>
