--- a/quiz.html
+++ b/quiz.html
@@ -184,9 +184,9 @@
 
           <!-- STAGE2-1問題セクション　ここから -->
           <h2>第1問</h2>
-          <div class="hr rem2t"></div>
+          <div class="hr Mrem2t"></div>
           <img class="toplogo" src="assets/img/y1.png" alt="2-1YouTube問題">
-          <div class="hr rem2b"></div>
+          <div class="hr Mrem2b"></div>
           <!-- STAGE2問題セクション　ここまで -->
 
           <!-- STAGE2解答入力セクション　ここから -->
@@ -231,9 +231,9 @@
           <!-- STAGE2-2問題セクション　ここから -->
           <br />
           <h2>第2問</h2>
-          <div class="hr rem2t"></div>
+          <div class="hr Mrem2t"></div>
           <img class="toplogo" src="assets/img/y2.png" alt="2-2YouTube問題">
-          <div class="hr rem2b"></div>
+          <div class="hr Mrem2b"></div>
           <!-- STAGE2-2問題セクション　ここまで -->
 
           <!-- STAGE2-2解答入力セクション　ここから -->
@@ -308,9 +308,9 @@
             <br /><br />
           </h3>
           <h2>FINALSTAGE：最終決戦</h2>
-          <div class="hr rem2t"></div>
+          <div class="hr Mrem2t"></div>
           <img class="toplogo" src="assets/img/fin.png" alt="main">
-          <div class="hr rem2b"></div>
+          <div class="hr Mrem2b"></div>
           <!-- STAGE3問題セクション　ここまで -->
 
           <!-- STAGE3解答入力セクションここから -->
@@ -371,7 +371,7 @@
     </div>
 
     <div id="cr">
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       授業主催： N・S高<br />
       協力：株式会社SCRAP<br />
@@ -383,7 +383,7 @@
       生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
 
-      <div class="hr rem2"></div>
+      <div class="hr Mrem2"></div>
 
       © 2021 YOYOGI39
     </div>
