--- a/thx.html
+++ b/thx.html
@@ -23,7 +23,7 @@
 
     <div id="text">
 
-      <span class="Mrem2t">雛形メッセージ</span>
+      <span class="Prem2t">雛形メッセージ</span>
       <h4><a href="" class="btn-flat-border">雛形ボタン</a></h4>
 
     </div>
