--- a/thx.html
+++ b/thx.html
@@ -23,8 +23,15 @@
 
     <div id="text">
 
-      <span class="Prem2t">雛形メッセージ</span>
-      <h4><a href="" class="btn-flat-border">雛形ボタン</a></h4>
+      <span class="thx">
+        <div class="thxtext">雛形メッセージ</div>
+        <h4><a href="" class="btn-flat-border">雛形ボタン</a></h4>
+      </span>
+
+      <span class="thx">
+        <div class="thxtext">雛形メッセージ</div>
+        <h4><a href="" class="btn-flat-border">雛形ボタン</a></h4>
+      </span>
 
     </div>
 
