PCからスマホへの誘導追加

--- a/attention.html
+++ b/attention.html
@@ -28,11 +28,24 @@
         前に進もうにも、順路にはロックが掛かっており進めない。<br />
         どうにかしてロックを解き、スマートフォンから脱出しよう……<br /><br />
         <span class="red">「できる物ならやってみて下さい。この"スマートフォン"という電子の迷宮からの脱出を」</span>
-      </h3><br />
+      </h3>
 
-      <img src="assets/img/timg.png" class="toplogo" alt="スマホカラダッシュツセヨ">
+      <div class="frame phide">
 
-      <h1><a href="quiz.html" class="btn-flat-border">スマートフォンからの脱出</a></h1>
+        <h2>おすすめのプレイ方法</h2>
+        <br />
+
+        <h3>このゲームの題材のスマートフォンでプレイすることを推奨します<br />
+          以下のQRコードを読み取って下さい<br />
+        </h3>
+
+        <img src="assets/img/qr.png" class="" alt="QRコード">
+
+      </div>
+
+      <img src="assets/img/timg.png" class="toplogo Mrem2" alt="スマホカラダッシュツセヨ">
+
+      <h1><a href="quiz.html" class="btn-flat-border Mrem2b">スマートフォンからの脱出</a></h1>
 
     </div>
 
