Stage○の枠を追加

--- a/attention.html
+++ b/attention.html
@@ -23,7 +23,8 @@
     <div id="text">
       <h1 class="attention Mrem2">非常事態発生</h1>
 
-      <h3>無事にスマホ内部に潜入が出来たか…と思った矢先に、<br />
+      <h3>
+        無事にスマホ内部に潜入が出来たか…と思った矢先に、<br />
         なんと、案内AIが暴走しスマホ内に閉じ込められてしまった。<br />
         前に進もうにも、順路にはロックが掛かっており進めない。<br />
         どうにかしてロックを解き、スマートフォンから脱出しよう……<br /><br />
