--- a/quiz.html
+++ b/quiz.html
@@ -25,7 +25,7 @@
       <!-- STAGE1　ここから -->
       <div v-if="next['stage0']" id="sectionStage1" class="stage">
 
-        <h2>STAGE：1 Twitterの謎</h2>
+        <h1 class="window Mrem2">STAGE：1 Twitterの謎</h1>
 
         <h3>
           ここが最初のアプリ、Twitterのようだ。
@@ -167,7 +167,8 @@
       <!-- STAGE2　ここから -->
       <div v-if="next['stage1']" id="sectionStage2" class="stage">
 
-        <h2>STAGE：2 YouTubeの謎</h2>
+        <h1 class="window Mrem2">STAGE：2 YouTubeの謎</h1>
+
         <h3>
           ここが2つ目かつ最後のアプリ、YouTubeのようだ。
           <br />
@@ -307,7 +308,8 @@
             AIを倒し、今度こそ脱出しよう。
             <br /><br />
           </h3>
-          <h2>FINALSTAGE：最終決戦</h2>
+
+          <h1 class="attention Mrem2">FINALSTAGE：最終決戦</h1>
           <div class="hr Mrem2t"></div>
           <img class="toplogo" src="assets/img/fin.png" alt="main">
           <div class="hr Mrem2b"></div>
