送信ボタンの微調整

--- a/quiz.html
+++ b/quiz.html
@@ -154,7 +154,7 @@
                 <p>Twitterのロックが解除された！</p><br />
                 <p>次のアプリへ進もう。</p><br />
                 <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'"
-                  class="btn-flat-border">次のステージへ</button>
+                  class="btn-flat-border sousin">次のステージへ</button>
               </div>
             </div>
         </section>
@@ -284,7 +284,7 @@
                 <p>YouTubeのロックが解除された！</p><br />
                 <p>さあ、脱出しよう。</p><br />
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'"
-                  class="btn-flat-border">次のステージへ</button>
+                  class="btn-flat-border sousin">次のステージへ</button>
               </div>
             </div>
         </section>
