共有ボタン仮追加

--- a/end.html
+++ b/end.html
@@ -31,6 +31,20 @@
 
       <h2 class="Mrem2b">スマートフォンからの脱出　おしまい！</h2>
 
+      <p>面白かった！という方は是非共有をお願いします！</p>
+      <p>↓↓↓</p>
+      <h3>
+        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
+          data-text="スマホ探検に行ってきました！あなたもいかが？ 【スマートフォンからの脱出 feat.YOYOGI39 | ProjectN 】 #yoyogi39 #スマートフォンからの脱出 "
+          data-url="https://yoyogi39.ml" data-related="realryo1" data-lang="ja" data-show-count="false">Tweet</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </h3>
+
+      <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL" data-url="https://yoyogi39.ml"
+        data-color="default" data-size="large" data-count="true" data-ver="3" style="display: none;"></div>
+      <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async"
+        defer="defer"></script>
+
       <div class="frame">
 
         <h2>このゲームの企画者</h2>
