--- a/end.html
+++ b/end.html
@@ -42,7 +42,8 @@
       </h3>
 
       <h3>
-        <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL" data-url="https://yoyogi39.ml"
+        <div class="line-it-button" data-lang="ja" data-type="share-a" data-env="REAL"
+          data-url="スマホ探検に行ってきました！あなたもいかが？ 【スマートフォンからの脱出 feat.YOYOGI39 | ProjectN 】 https://yoyogi39.ml"
           data-color="default" data-size="large" data-count="true" data-ver="3" style="display: none;"></div>
         <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async"
           defer="defer"></script>
