ラストちょい変え

--- a/end.html
+++ b/end.html
@@ -29,7 +29,7 @@
         「とにかく、ツアーに参加して頂き、誠にありがとうございました！」
       </h3>
 
-      <h2 class="Mrem2b">スマートフォンからの脱出　おしまい！</h2>
+      <h2 class="Mrem2b">スマートフォンからの脱出<br />おしまい！</h2>
 
       <p>面白かった！という方は是非共有をお願いします！</p>
       <p>↓↓↓</p>
